Change CSS to remove minor horizontal scroll on medium and mobile devices. Fix overlap on medium devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ body {
     padding-top: 60px;
     font-family: var(--primary-font);
     position: relative;
+    overflow-x: hidden;
 }
 
 h1,
@@ -61,7 +62,7 @@ p {
     justify-content: center;
     align-items: center;
     gap: 10px;
-    margin-bottom: 20px;
+    margin-bottom: -100px;
 }
 
 .button {
@@ -82,25 +83,23 @@ p {
 }
 
 .moves {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: auto;
     display: flex;
-    justify-content: space-between;
-    margin-top: -200px;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 150px;
+    gap: 20px;
 }
 
 .rules {
-    margin-top: -150px;
+    margin-top: 100px;
 }
 
-.user{
-    margin-left: 300px;
-    margin-top: 200px;
-}
-
-.computer{
-    margin-right: 300px;
-    margin-top: 200px;
+.user,
+.computer {
+    margin: 20px 0;
 }
 
 footer {
@@ -146,36 +145,33 @@ footer {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
+        margin-top: -250px;
+        margin-bottom: -250px;
     }
 
     .moves {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
+        flex-direction: column;
+        align-items: center;
     }
 
-    #userImage {
-        width: 150px;
-        height: 150px;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
+    #userImage,
     #computerImage {
         width: 150px;
         height: 150px;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
+        margin-bottom: 5px;
     }
 
     .rules {
-        margin-top: 150px;
+        margin-bottom: 50px;
     }
 
     footer {
-        margin-top: auto;
+        margin-top: -150px;
+    }
+
+    .user,
+    .computer {
+        margin: 0;
     }
 }
 
@@ -187,18 +183,27 @@ footer {
     }
 
     .moves {
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-        flex-direction: row;
-        margin-top: auto;
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+        margin-top: 20px;
+    }
+
+    .user,
+    .computer {
+        margin: 20px 0;
+    }
+
+    .buttons {
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
 
     .rules {
-        margin-top: -350px;
+        margin-top: 20px;
     }
 
     footer {
-        margin-top: 200px;
+        margin-top: 20px;
     }
 }
